Removed PMD, JCSC, FindBugs.
SVN-Revision: 23387